hphp/test/slow/parser/function_call_in_enum.php.expectf

Fatal error: Expected constant expression for initializer in %s/function_call_in_enum.php on line 4
